--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@clerk/nextjs": "^6.22.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.50.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.516.0",
@@ -26,13 +29,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-   
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-  
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
